--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./Styles-Wide.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-    <div>
     <header>
         <a class="link-header">Products</a>
         <a class="link-header">Company</a>
@@ -30,6 +29,5 @@
         <a>LEARN MORE</a>
     </section>
     </main>
-    </div>
 </body>
 </html>
